--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <nav>
   <ul class="header__list">
-    <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
+   <!--  <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li> -->
+    <li><a href="{{ '/assets/JArmstrong_2020_Resume.pdf' | prepend: site.baseurl }}">CV</a></li>
     <li><span class="popup__open">Contact</span></li>
   </ul>
 </nav>
